--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
      <meta http-equiv="x-ua-compatible" content="ie=edge">
  
      <!-- Bootstrap CSS -->
+     <!--  build:css css/main.css  -->
      <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
      <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
      <link rel="stylesheet" href="css/styles.css">
-
+    <!--  endbuild  -->
 
 </head>
 
@@ -32,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginModalButton">
                         <span class="fa fa-sign-in"></span> Login
                     </a>
                 </span>
@@ -45,7 +46,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve a Table</h4>
-                    <button type="button" class="close" data-dismiss="modal">
+                    <button type="button" class="close" id="closeLoginModal">
                         &times;
                     </button>
                 </div>
@@ -69,7 +70,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" id="cancelLoginModal">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
                         </div>
                     </form>
@@ -83,7 +84,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-dismiss="modal">
+                    <button type="button" class="close" id="closeReserveModal">
                         &times;
                     </button>
                 </div>
@@ -142,7 +143,7 @@
                         </div>
 
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm offset-3" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary btn-sm offset-3" id="cancelReserveModal">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
                         </div>
                     </form>
@@ -162,7 +163,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a data-toggle="modal" data-target="#reserveModal"><button class="btn btn-block nav-link btn-warning" >Reserve Table</button></a>
+                    <a id="reserveModalButton"><button class="btn btn-block nav-link btn-warning" >Reserve Table</button></a>
                 </div>
                 <!-- 
                     this is a tooltip and would go inside the button tag
@@ -381,28 +382,12 @@
         </div>
     </footer>
 <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+<!--  build:js js/main.js  -->
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>
-    $(document).ready(function(){
-        $('#mycarousel').carousel({interval:2000});
-        $('#carouselButton').click(function(){
-            if ($('#carouselButton').children('span').hasClass('fa-pause')){
-                $('#mycarousel').carousel('pause');
-                $('#carouselButton').children('span').removeClass('fa-pause');
-                $('#carouselButton').children('span').addClass('fa-play');
-            }
-            else if ($('#carouselButton').children('span').hasClass('fa-play')){
-                $('#mycarousel').carousel('cycle');
-                $('#carouselButton').children('span').removeClass('fa-play');
-                $('#carouselButton').children('span').addClass('fa-pause');
-            }
-        });
-        
-    });
-</script>
-
+<script src="js/scripts.js"></script>
+<!--  endbuild  -->
 <!--
     this script is for the tooltip
 
